JACSM established. Work in progress, to be continued.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ams_article)
 export(ctex)
 export(ctex_template)
 export(elsevier_article)
+export(jacsm_article)
 export(jss_article)
 export(lncs_article)
 export(pnas_article)
